# MedianFilter

./: .gitignore  LICENSE  Makefile  MedianFilter.c  MedianFilter.h  MedianFilter.hpp  README.md  example.c  library.json  library.properties  sonar-project.properties
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  README.md  bench_median_filters.cpp  build_and_run_windows.bat  callgrind_bench.c  callgrind_bench_competitors.cpp  callgrind_bench_cpp.cpp  callgrind_bench_cpp_float.cpp  callgrind_bench_takingbytes.c  callgrind_bench_vpetrigo.c  noninline_wrapper.c  run_callgrind.sh  run_pinned.bat
benchmarks/competitors/: insertion_sort_ring.h  naive_sort.h  nth_element.h  takingbytes_wrapper.c  takingbytes_wrapper.h
examples/: 01_basic_usage.c  02_adc_noise_filter.c  03_multichannel_sensors.c  04_window_size_comparison.c  05_cpp_template.cpp  README.md
examples/platform/: arduino_analog_filter.ino  esp_idf_adc_filter.c  stm32_hal_adc.c
tests/: README.md  circular_test.c  stress_test.c  test_cpp.cpp  test_harness.h
